# SafeOps-AI

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: health.py  rag.py
backend/app/core/: config.py
backend/app/rag/: config.py  embeddings.py  evaluation.py  hybrid.py  hybrid_evaluation.py  ingestion.py  schemas.py  service.py  vector_store.py  vectorless.py  vectorless_evaluation.py
backend/scripts/: benchmark_retrievers.py  build_vector_index.py  compare_retrievers.py  evaluate_vector_retriever.py  evaluate_vectorless_retriever.py
backend/tests/: test_health.py
backend/tests/rag/: test_hybrid.py  test_ingestion.py  test_rag_api.py  test_service.py  test_vectorless.py
data/knowledge_base/: corpus_manifest.json
data/knowledge_base/architecture/: service-dependencies.md  system-overview.md
data/knowledge_base/policies/: safe-tool-policy.md
data/knowledge_base/runbooks/: high-service-latency.md  memory-exhaustion.md
data/knowledge_base/services/: checkout-service.md  recommendation-service.md
evaluation/rag/: seed_questions.json
evaluation/rag/results/: hybrid_retrieval_results.json  vector_retrieval_results.json  vectorless_retrieval_results.json
