[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safeops-ai-backend"
version = "0.1.0"
description = "Backend API for the SafeOps AI incident investigation platform"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "langchain-core>=1.4.9",
    "langchain-text-splitters>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "sentence-transformers>=5.6.0",
    "qdrant-client>=1.18.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
    "pytest-asyncio",
    "ruff"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
